[package]
name = "zq2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
clap = "3.2.19"
rusqlite = { version = "0.28.0", features = ["bundled"] }
csv = "1.1"
xml-rs = "0.8"